--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Hello Page</title>
 </head>
 <body>
-    <h1>hello page testing</h1>
-    <p th:text="${message}"></p>
+    <h1 th:text="${message}">Default Message</h1>
 </body>
 </html>
